cabal-version: 2.4

name:        prim-bytearray
category:    Data
version:     1.0.0
synopsis:    TODO
description: TODO

author:       jacob leach
maintainer:   jacobleach@protonmail.com
copyright:    2022, Jacob Leach
homepage:     https://github.com/riz0id/prim-bytearray
license:      ISC
license-file: LICENSE
build-type:   Simple

extra-source-files:
  CHANGELOG.md
  README.md

tested-with:
  GHC == 9.2.2
  GHC == 9.0.2

source-repository head
  type:     git
  location: https://github.com/riz0id/prim-bytearray

flag llvm
  Description: Compile using the LLVM backend.
  Default:     False
  Manual:      True

common common
  default-language: Haskell2010

  default-extensions:
    BlockArguments ImportQualifiedPost MagicHash UnboxedTuples

  ghc-options:
    -Wall
    -Wcompat
    -Wcpp-undef
    -Widentities
    -Wmissing-export-lists

    -ddump-to-file
    -ddump-stg-final
    -ddump-simpl
    -dppr-cols=120
    -dsuppress-module-prefixes
    -dsuppress-uniques

  if flag(llvm) 
    ghc-options: -fllvm 

  build-depends:
    , base >= 4.15.1 && < 4.17

library
  import:         common
  hs-source-dirs: src

  default-extensions:
    KindSignatures PolyKinds RankNTypes ScopedTypeVariables

  ghc-options:
    -- `-j4` is set (as opposed to `-j`) due to the small number of modules that 
    -- are exported by this package.
    -j4

    -- `-O` is explicitly set since none of the functions exported by this 
    -- library would benefit from higher optimization levels. This helps reduce 
    -- compile times. 
    -O3

    -- `-fmax-simplifier-iterations` is set to keep compile times in check. 
    -- The functions in this library are simple and do not need very many 
    -- simplifier passes.
    -fmax-simplifier-iterations=20

  build-depends:
    , ghc-prim         >= 0.7.0  && < 0.9
    , prim-bool        
    , prim-compat      >= 1.0.0  && < 1.1.0
    , prim-int         >= 1.0.0  && < 1.1.0
    , prim-ord         
    , primitive
    , template-haskell >= 2.17.0 && < 2.19

  exposed-modules:
    Control.Exception.IndexError
    Data.ByteArray.Prim
    Data.ByteArray.Prim.Unsafe
    Data.MutByteArray.Prim
    Data.MutByteArray.Prim.Unsafe

test-suite test
  import:         common
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs

  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N"

  build-depends:
    , hedgehog
    , prim-bool
    , prim-ord         
    , primitive
    , prim-bytearray
    , tasty
    , tasty-hedgehog 

  other-modules:   
    Test.ByteArray
    Test.ByteArray.Conversion
    Test.ByteArray.Copy
    Test.ByteArray.Ord
    Test.Compat
    Test.Gen
    Test.MutByteArray